Update and rename 0.5: Single page app diagram to 0.5: Single page app diagram.md

--- a/Part-0/0.5: Single page app diagram.md
+++ b/Part-0/0.5: Single page app diagram.md
@@ -2,3 +2,7 @@ Problem : Create a diagram depicting the situation where the user goes to the si
 
 Solution :
 
+![Sequece diagrma]([image_url](https://github.com/shivambankar/Open/blob/main/Part-0/Untitled%20diagram-2024-07-03-150456.png))
+
+
+
