--- a/Part-0/0.6: New note in Single page app diagram.md
+++ b/Part-0/0.6: New note in Single page app diagram.md
@@ -2,4 +2,4 @@ Problem : Create a diagram depicting the situation where the user creates a new 
 
 Solution :
 
-![Alt text](image_url)
+![Sequence diagram]([image_url](https://github.com/shivambankar/Open/blob/main/Part-0/Untitled%20diagram-2024-07-03-145951.png))
